# graphics-projects

./: .gitignore
Assignment2-Camera/algorithm-worksheet/: A2_Handout_Alg.aux  A2_Handout_Alg.fdb_latexmk  A2_Handout_Alg.tex
Assignment2-Camera/support code/: Algebra.h  Assignment2.cpp  Camera.cpp  Camera.h  Cone.cpp  Cube.cpp  Cube.h  Cylinder.cpp  Makefile  a1  glui.dylib  linux-a2.id0  linux-a2.id1
Assignment_1/support-code/: Algebra.h
Lab01/: Lab01.docx
Lab01/Handout/: geometry.h  main.cpp  ply  ply.cpp  ply.h
Lab01/__MACOSX/: ._Lab01.docx
Lab02/Handout/: main.cpp  ply.cpp  ply.h  ui
Lab03/Handout/: lab  main.cpp  solarSystem.cpp  solarSystem.h
Lab04/: Lab07.docx
Lab04/Handout/: Makefile  entity.cpp  entity.h  geometry.h  lab  main.cpp  movieCamera.cpp  movieCamera.h  ply.cpp  ply.cpp_bak  ply.h
Lab05/: example-animations.txt
Lab05/Handout/: Camera.h  a1  main.cpp  movieCamera.cpp  movieCamera.h  ply.cpp
Lab05/__MACOSX/: ._example-animations.txt
Lab06/: Lab06.docx
Lab06/Handout/: Makefile  a1  controlPoint.h  main.cpp  spline.cpp  spline.h
Lab06/__MACOSX/: ._Lab06.docx
Lab06/code/: CMakeLists.txt  controlPoint.h  main.cpp  spline.cpp
Lab06?/Handout/: lab  ply.cpp  ply.cpp_bak
Lab07/code/: CMakeCache.txt  CMakeLists.txt  cmake_install.cmake  entity.h  geometry.h  lab7.cbp  main.cpp  ply.cpp  ply.h
Lab07/handout/: ~$Lab07.docx
Lab08/code/: Algebra.h  CMakeLists.txt  Camera.cpp  Camera.h  main.cpp  object.cpp  object.h  ppm.cpp
Lab09/lab9/: app.js  handout.aux  handout.tex  index.html
Lab11/code/: Algebra.h  CMakeLists.txt  main.cpp  object.cpp  object.h
a1/: A1_Handout_alg.tex
a1/support-code/: Assignment1.cpp  Cone.cpp  Makefile  Special.h  Sphere.h  a1
a2/algorithm-worksheet/: A2_Handout_Alg.fdb_latexmk  A2_Handout_Alg.fls
a2/assignment-handout/: A2_Handout.tex
a2/support code/: Camera.cpp  Shape.h  Special.cpp  Sphere.cpp  linux-a2.id2  linux-a2.nam  linux-a2.til  out.txt
a3/algorithm-worksheet/: A3_Handout_Alg.aux  A3_Handout_Alg.out  A3_Handout_Alg.tex
a3/assignment-handout/: A3_Handout.tex
a3/support code/: Algebra.h  Assignment3.cpp  Camera.cpp  Camera.h  Cylinder.cpp  Makefile  SceneData.h  SceneParser.cpp  a1  bak.py  dragon.xml  dragon3.xml  grad.xml  heart.xml  im2xml.py  test.xml  tinystr.cpp  tree.xml
a4/algorithm-worksheet/: A4_Handout_Alg.fdb_latexmk  A4_Handout_Alg.fls  A4_Handout_Alg.tex
a4/assignment-handout/: A4_Handout.tex
a4/code/: Algebra.hpp  Assignment4.cpp  BVHNode.cpp  BVHNode.hpp  BVHTree.cpp  BVHTree.hpp  Box.cpp  Box.hpp  CMakeLists.txt  Camera.cpp  Camera.hpp  Cone.cpp  Cone.hpp  Cube.cpp  Cube.hpp  Cylinder.cpp  Cylinder.hpp  Flattener.cpp  Flattener.hpp  KDNode.cpp  KDNode.hpp  KDTree.cpp  KDTree.hpp  Raycaster.cpp  Raycaster.hpp  SceneData.hpp  SceneParser.cpp  SceneParser.hpp  Shape.hpp  Sphere.cpp  Sphere.hpp  tinystr.cpp  tinyxml.cpp  tinyxml.hpp  tinyxmlparser.cpp
a4/code/data/general/: sphere_robot.xml  test.xml  two_cube.xml
a4/code/data/tests/: allShape.xml  all_effects.xml  all_objects.xml  shinyballs.xml
a5/algorithm-worksheet/: A5_Handout_Alg.fdb_latexmk  (+2 more)
a5/code/: Algebra.hpp  Assignment5.cpp  Box.cpp  Box.hpp  CMakeLists.txt  Camera.cpp  Camera.hpp  Cone.cpp  Cone.hpp  Cube.cpp  Cube.hpp  Cylinder.cpp  Cylinder.hpp  Flattener.cpp  Flattener.hpp  KDNode.cpp  KDNode.hpp  KDTree.cpp  KDTree.hpp  Raycaster.cpp  Raycaster.hpp  SceneParser.cpp  SceneParser.hpp  Shape.hpp  Sphere.cpp  Sphere.hpp  ppm.cpp  ppm.hpp  times.txt  tinyxmlerror.cpp
a5/code/data/general/: cone_robot.xml
a5/code/data/tests/: all.xml  mirror_test.xml  shadowball.xml  work.xml
(+48 files in other folders)
